--- a/src/timeline/timeline.html
+++ b/src/timeline/timeline.html
@@ -109,13 +109,18 @@
       let categories = [];
       let categoriesIndex = 0;
       let data = [];
+      let marklineData = [];
 
       // 1. Get the base time from tracing time clock calibration. For GPU only, this is nop.
       let baseTime = (cpuDataPara != null) ? await getBaseTimeFromTracing(cpuDataUrl) : [0, 0, gpuFreq];
 
       // 2. Create CPU model.
       if (cpuDataPara != null) {
-        const cpuTraces = await parseCPUTraceWithBase(cpuDataUrl, 0, baseTime[0]);
+        const [cpuTraces, jsTraceTimestamp] = await parseCPUTraceWithBase(cpuDataUrl, 0, baseTime[0]);
+
+        for (let key in jsTraceTimestamp) {
+          marklineData = marklineData.concat(jsTraceTimestamp[key]);
+        }
         const [cpuCategories, cpuCategoriesIndex] = createCPUModel(cpuTraces, data, categoriesIndex);
         categoriesIndex = cpuCategoriesIndex;
         categories = categories.concat(cpuCategories);
@@ -131,12 +136,13 @@
       // 3. Create GPU model.
       if (gpuDataPara != null) {
         const gpuTraces = await parseGPUTraceWithBase(gpuDataUrl, 0, baseTime[1], gpuFreq, isRawTimestamp);
+        console.log("gpuTraces length: " + gpuTraces.length);
         const [gpuCategories, gpuCategoriesIndex] = createGPUModel(gpuTraces, data, categoriesIndex);
         categoriesIndex = gpuCategoriesIndex;
         categories = categories.concat(gpuCategories);
       }
 
-      let option = getOption(categories, data);
+      let option = getOption(categories, data, marklineData);
 
       // 4. Update DOM UI.
       updateDOMUI(option);
