--- a/src/timeline/timeline.html
+++ b/src/timeline/timeline.html
@@ -82,10 +82,13 @@
   <script>
     {
       // Draw the legend. eventJSTimestampNames is from timeline_trace.js.
-      ctx = document.getElementById("canvasLegend").getContext("2d");
+      const canvas = document.getElementById("canvasLegend");
+      const ctx = canvas.getContext("2d");
+      const pixelRatio = getPixelRatio(ctx);
+      var hidpiCanvasContext = createHidpiCanvasContext(canvas, 800, 80, pixelRatio);
       for (var i in eventJSTimestampNames) {
         const fromX = 100 + i * 120;
-        drawArraw(ctx, fromX, 50, fromX, 10, eventJSTimestampNames[i], eventJSTimestampColors[i]);
+        drawArraw(hidpiCanvasContext, fromX, 50, fromX, 10, eventJSTimestampNames[i], eventJSTimestampColors[i]);
       }
     }
 
